--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -4,6 +4,9 @@ $fontPrincipal:'Montserrat', sans-serif;
 /*Secundarias*/
 $fontSecondary:'Inconsolata', monospace;
 
+/*Destacados*/
+$fontDestacados:'Canela', serif;
+
 /*Weight*/
 $fontWeight:
     lighter,
