--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,5 +1,8 @@
 *{
     margin: 0%;
     padding: 0%;
+    list-style: none;
     box-sizing: border-box;
+    text-decoration: none;
+    scroll-behavior: smooth;
 }
