--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,42 +6,43 @@
 header{
     .menuVanu{
         background-color: nth($colors, 7);
-        color: nth($colors, 1 );
         .logo{
-            height: 7%;
-            width: 10%;
+            height: 6%;
+            width: 8%;
             transition: 3s;
             -moz-transition: 3s;
             -webkit-transition: 3s;
             -o-transition: 3s;
             margin-left: 5%;
-
             &:hover{
                 @include prefijos (rotate(360deg))
             }
         }
         
         .navbar-toggler{
-            border: 1px solid nth($colors, 1);
-            .navbar-toggler-icon{
-                color: nth($colors, 1);
-            }
+            border-color: nth($colors, 6);
+            padding: .25rem .5rem;
             .hamburguesa{
-                color: nth($colors, 1);
-                background-color: #f4d4e046;
-                border-radius:10%;
+                width: 1.2em;
+                height: 1.2em;
+                color: nth($colors, 6);
+                border-color: nth($colors, 6);
             }
         }
 
         #navbarNavDropdown{
             justify-content: flex-end;
-            margin-right: 3%;
-            
-            .menuLink{
-                color: nth($colors, 1);
-                font-family: $fontSecondary;
-                letter-spacing: 4px;
-            }        
+            margin-right: 8%;
+            .nav-item{
+                padding: 0 4%;
+                .menuLink{
+                    color: nth($colors, 6);
+                    font-family: $fontSecondary;
+                    letter-spacing: 4px;
+                    font-size: 0.9rem;
+                }        
+    
+            }
         }
     }
 }
